tests/functional/lang/eval-fail-symmetric-lessThan-throw-abort.err.exp
error:
       … while calling the 'lessThan' builtin
         at /pwd/lang/eval-fail-symmetric-lessThan-throw-abort.nix:1:1:
            1| builtins.lessThan (throw "x") (abort "y")
             | ^
            2|

       … while calling the 'abort' builtin
         at /pwd/lang/eval-fail-symmetric-lessThan-throw-abort.nix:1:32:
            1| builtins.lessThan (throw "x") (abort "y")
             |                                ^
            2|

       error: evaluation aborted with the following error message: 'y'
